--- a/scss/app.scss
+++ b/scss/app.scss
@@ -36,8 +36,8 @@ header, footer, section{ position: relative; }
 .form-field{ margin-bottom:15px; }
 /* Small Text: I give GoPage permis: */
 .small-text{ font-family: $font-raleway; font-size: 12px; color: #373A3C; line-height: 13px; }
-.feature-video{ max-height:575px; min-height:220px;
-	video{ max-height:575px;min-height:220px;  }
+.feature-video{ max-height:480px; min-height:220px; margin-top:1.25rem;
+	video{ max-height:480px; min-height:220px;  }
  }
 /*links */
 a{ color: #535353; }
