--- a/scss/app.scss
+++ b/scss/app.scss
@@ -48,7 +48,7 @@ section a:hover{ color:#f59125; }
  	a{ color:#fff; font-size:16px;}
  	a.login-link{ padding: 9px 30px;  }
  	a.username{ text-decoration:underline; }
- 	a.logout-link{ position:absolute; bottom:0; width: 90px; top: 20px; }
+ 	a.logout-link{ position:absolute; bottom:0; width: 90px; top: 20px; right:0; }
 }
 /* Why Work With GoPage: */
 header h1{ color: #FFFFFF; }
@@ -70,13 +70,14 @@ section#outerMost{
 	> .row{ max-width:100%; }
 }
 .logo{ float:left; background: url(../style_assets/logo.png) no-repeat; text-indent:-9999px; width:139px; height:43px; }
-#usj-landing header{  background: url(../style_assets/USJ-header-image.jpg) no-repeat; background-size: cover; }
+/* #usj-landing header{  background: url(../style_assets/USJ-header-image.jpg) no-repeat; background-size: cover; } */
 /* header:before{ content: ''; display: inline-block; height: 100%; vertical-align: middle; margin-right: -0.25em; } Adjusts for spacing  */
 header{
-    background-image: url(../style_assets/USJ-header-image.jpg);
-    height:440px; background-size: cover;
-    .head-wrap{ background-color: rgba(0,0,0,0.4); width: 100%; height:100%; }
-    .top-bar{ max-width: 1158px; margin: 0 auto; padding:35px 0 0 0; background-color: transparent;}
+   /* background-image: url(../style_assets/USJ-header-image.jpg); background-size: cover; */
+    
+    #hero img{ z-index:1; min-height:400px; width:100%; }
+    .head-wrap{ position:absolute; top:0; z-index:2; background-color: rgba(0,0,0,0.4); width: 100%; height:100%; }
+    .top-bar{ max-width: 1158px; margin: 0 auto; padding:35px 15px 0 15px; background-color: transparent;}
 
     .slogan{ color:#fff;
       position: absolute; top:50%; left:0; right:0; transform: translateY(-50%); max-width:80%; margin:0 auto;
@@ -91,11 +92,11 @@ section.feature-video{
   }
 }
 
-#content{ font-family: $font-raleway; font-size: 16px; color: #535353; letter-spacing: 0; line-height: 24px; padding:57px 0 95px; max-width:1190px; margin:0 auto;
+#content{ font-family: $font-raleway; font-size: 16px; color: #535353; letter-spacing: 0; line-height: 24px; padding:57px 0 65px; max-width:1190px; margin:0 auto;
   ul{ margin-left:30px; margin-right:15px; }
 }
 #content .blocks{
-  margin:80px auto 94px; max-width:1180px;
+  margin:80px auto 64px; max-width:1180px;
   h4{ color:#7bc846; }
   > .columns{  }
   .img-col{ padding-bottom:1.25rem;
@@ -208,13 +209,17 @@ footer{ border-top:10px solid #f69b26; background-color:#535353; padding: 40px 0
   }
   /* small screen only */
   @media only screen and (max-width: 40.063em) {
+  	 #content .blocks{ margin-bottom:0; }
   	 .blocks > .columns { margin-bottom:2.25rem; }
+  	#usj-landing header .slogan{ bottom:0; top:initial; transform:initial;
+		h1{ font-size:26px; }  	 
+  	  } 
     footer{
       .footer-links .columns, .social-media{ padding-top:1.25rem; }
     }
     input[type='submit']{
 		width:100%;    
-    }
+    }    
   }
 
    /* Retina-specific styles here */
@@ -225,6 +230,6 @@ footer{ border-top:10px solid #f69b26; background-color:#535353; padding: 40px 0
  only screen and (        min-device-pixel-ratio: 2),
  only screen and (                min-resolution: 192dpi),
  only screen and (                min-resolution: 2dppx) {
-   #usj-landing header{ background-image: url(../style_assets/USJ-header-image-2x.jpg); }
+   /* #usj-landing header{ background-image: url(../style_assets/USJ-header-image-2x.jpg); } */
    #signup header { background-image: url(../style_assets/form-header-image-2x.jpg); }
  }
